testimonial-grid-section-challenge: make the testimonial section vertically centered

--- a/testimonial-grid-section-challenge/style.css
+++ b/testimonial-grid-section-challenge/style.css
@@ -19,6 +19,9 @@ body {
   font-family: "Barlow Semi Condensed", sans-serif;
   background-color: var(--light-grayish-blue);
   padding: 4.5em 1.5em;
+  display: grid;
+  place-items: center;
+  height: 100vh;
 }
 
 .testimonial {
