--- a/testimonial-grid-section-challenge/style.css
+++ b/testimonial-grid-section-challenge/style.css
@@ -148,7 +148,7 @@ body {
   line-height: 11px;
   letter-spacing: 0.3px;
   opacity: 0.5;
-  margin-top: 4px;
+  margin-block-start: 4px;
 }
 
 .testimonial__quote--intro {
